refactored shutdown filter, added config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,3 +57,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+shutdown.grace-period-seconds=60
+shutdown.try-lock-timeout-seconds=10
