added scala logging

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,13 +49,13 @@ application.langs="en"
 # by providing an application-logger.xml file in the conf directory.
 
 # Root logger:
-logger.root=DEBUG
+#logger.root=DEBUG
 
 # Logger used by the framework:
-logger.play=DEBUG
+#logger.play=DEBUG
 
 # Logger provided to your application:
-logger.application=DEBUG
+#logger.application=DEBUG
 
 shutdown.grace-period-seconds=60
 shutdown.try-lock-timeout-seconds=10
